# ESP32Stepper

./: .gitignore  README.md  fp-info-cache  fp-lib-table  rotations.txt  stepper_driver  stepper_driver-cache.lib  stepper_driver-rescue.lib  stepper_driver.kicad_pcb  stepper_driver.kicad_pcb-bak  stepper_driver.net  stepper_driver.pro  stepper_driver.sch  stepper_driver.sch-bak  stepper_driver.xml  stepper_driver_bom_jlc.csv  stepper_driver_cpl_jlc.csv  sym-lib-table
controller/Woodpecker/: CMakeLists.txt  Info.plist  connectionhandler.cpp  devicefinder.cpp  devicefinder.h  devicehandler.cpp  devicehandler.h  deviceinfo.cpp  globals.h  images.qrc  main.cpp  qml.qrc  woodpecker.pro
controller/Woodpecker/assets/: patterns.eps  woodpecker.eps
controller/Woodpecker/qml/: App.qml  Connect.qml  Control.qml  ControlSlider.qml  GamePage.qml  GameSettings.qml  SplashScreen.qml  TitleBar.qml  main.qml
doc/tline_analysis/: 1mm_gcpw.dump  1mm_gcpw.result  1mm_gcpw.result_field_plot_data  1mm_gcpw.ri.in  1mm_gcpw.ri.out  1mm_gcpw.ri.out.resistance  1mm_gcpw.ri.out.rl  1mm_gcpw.ri.script  1mm_gcpw.xsctn  1mm_gcpw.xsctn.backup
fab/: stepper_driver-B_Cu.gbl  stepper_driver-B_Mask.gbs  stepper_driver-B_SilkS.gbo  stepper_driver-Edge_Cuts.gm1  stepper_driver-F_Cu.gtl  stepper_driver-F_Mask.gts  stepper_driver-F_Paste.gtp  stepper_driver-F_SilkS.gto  stepper_driver-Gnd_Cu.g2  stepper_driver-NPTH.drl  stepper_driver-PTH.drl  stepper_driver-Vcc_Cu.g3  stepper_driver-all-pos.csv
firmware/main/: ble.h  config.h  crash.h  delay_inserter.h  float_utils.h  homing_controller.h  main.ino  stepper_control.h  tmc2160.h  tmc2590.h  tmc_driver.h
footprints/: TQFP48-EP.kicad_mod
footprints/ESP32-PICO-D4/: ESP32-PICO-D4.kicad_mod
footprints/TMC2590-eval.pretty/: AMD560C.kicad_mod  CP_Radial_D10.0mm_P5.00mm.kicad_mod  C_0603_1608Metric.kicad_mod  MountingHole_3mm_Pad.kicad_mod  PinHeader_1x03_P2.54mm_Vertical.kicad_mod  RIA 182-04.kicad_mod  RIA 330-02.kicad_mod  R_0603_1608Metric.kicad_mod  R_2512_6332Metric.kicad_mod  SMBJ54A.kicad_mod  SOIC-8_3.9x4.9mm_P1.27mm.kicad_mod  SOT-23-5.kicad_mod  SOT-23.kicad_mod  TMC-front-right-bar.kicad_mod  (+5 more)
(+3 files in other folders)
